quark/test/quark/AST/Errors/varAlreadyDeclared-002.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: i i32 -> void {
  var i := 1;
}

// CHECK:Error: var 'i' already defined!
